--- a/src/main/webapp/review/index.html
+++ b/src/main/webapp/review/index.html
@@ -12,10 +12,10 @@
 		<li>서버는 틀어놓으면 접속한 사용자에게 자원을 응답하는 프로그램이다.</li>
 		<li>사용자는 원하는 자원을 가져가기 위해 URL(서버의 주소 + uri)를 웹 브라우저에 입력하여 요청을 보낸다.</li>
 		<li>응답할 수 있는 자원은 동적 자원과 정적 자원으로 분류된다.</li>
-		<li>정적 자원이 종류로는 .html, .css, js, 이미지, 동영상 등이 있다.</li>
+		<li>정적 자원의 종류로는 .html, .css, js, 이미지, 동영상 등이 있다.</li>
 		<li>정적 자원들은 서버를 재시작하지 않아도 실시간으로 반영이 된다.</li>
 		<li>동적 자원의 종류로는 .jsp, 서블릿(HttpServlet)이 있다.</li>
-		<li>동적 자원 자바로 이루어져 있어 변경사항이 반영되려면 컴파일이 필요하기 때문에 서버를 재시작해야 한다.</li>
+		<li>동적 자원은 자바로 이루어져 있어 변경사항이 반영되려면 컴파일이 필요하기 때문에 서버를 재시작해야 한다.</li>
 	</ul>
 	
 	<script src="http://127.0.0.1:9000/chap02/review/index.js"></script>
